--- a/helm/afm/files/conf.yaml
+++ b/helm/afm/files/conf.yaml
@@ -2,8 +2,8 @@
 data:
 {{- range .Values.read }}
   - format: {{ .source.format }}
+    name: {{ .assetID | quote }}
     {{- if .source.connection.s3 }}
-    name: "{{ .source.connection.s3.bucket }}/{{ .source.connection.s3.object_key }}"
     path: "{{ .source.connection.s3.bucket }}/{{ .source.connection.s3.object_key }}"
     connection:
       type: s3
