--- a/sample/sample.yaml
+++ b/sample/sample.yaml
@@ -3,9 +3,9 @@ data:
     format: parquet
     path: "ursa-labs-taxi-data/2019/06/data.parquet"
     connection:
-      type: s3
-      s3:
-        endpoint_url: "https://s3.us-east-2.amazonaws.com"
+      type: restfs
+      restfs:
+        url: "https://s3.us-east-2.amazonaws.com/ursa-labs-taxi-data/2019/06/data.parquet"
     transformations:
       - action: "Redact"
         description: "redact stuff"
