replace httpfs with fsspec.implementations.http.HTTPFileSystem
Signed-off-by: CDORON@il.ibm.com <cdoron@lnx-arrow.sl.cloud9.ibm.com>

--- a/Pipfile
+++ b/Pipfile
@@ -17,7 +17,8 @@ pandas = "==1.0.5"
 pyarrow = "==1.0.1"
 schemed-yaml-config = "==0.0.3"
 requests = "*"
-httpfs = "*"
+fsspec = "*"
+aiohttp = "*"
 
 [requires]
 python_version = "3.8"
