passthrough replaces the dataset name
Signed-off-by: CDORON@il.ibm.com <cdoron@lnx-arrow.sl.cloud9.ibm.com>

--- a/sample/passthrough.yaml
+++ b/sample/passthrough.yaml
@@ -1,7 +1,11 @@
 data:
+  - name: "data.csv"
+    format: csv
+    path: "/home/cdoron/pilot_arrow_client/docker/data.csv"
+    connection:
+      type: localfs
   - name: "nyc-taxi.parquet"
-    format: parquet
-    path: "nyc-taxi.parquet"
+    path: "data.csv"
     connection:
       type: passthrough
       passthrough:
