checkpoint - not to lose progress
Signed-off-by: CDORON@il.ibm.com <cdoron@lnx-arrow.sl.cloud9.ibm.com>

--- a/sample/passthrough.yaml
+++ b/sample/passthrough.yaml
@@ -15,6 +15,6 @@ data:
       - action: "Redact"
         description: "redact stuff"
         columns:
-          - payment_type
+          - total_amount
         options:
           redactValue: "XXXXX"
