M4DModule: updated to match spec update
The chart name should now be in `chart.name`
instead of `chart`.

Signed-off-by: roee88 <roee88@gmail.com>

--- a/module.yaml
+++ b/module.yaml
@@ -6,7 +6,10 @@ metadata:
     name: arrow-flight-module
     version: 0.0.1  # semantic version
 spec:
-  chart: ghcr.io/the-mesh-for-data/arrow-flight-module-chart:latest
+  chart:
+    name: ghcr.io/the-mesh-for-data/arrow-flight-module-chart:latest
+    values:
+      image.tag: latest
   flows:
     - read
   capabilities:
