rename passthrough as flight

--- a/sample/flight.yaml
+++ b/sample/flight.yaml
@@ -6,9 +6,9 @@ data:
       type: localfs
   - name: "nyc-taxi.parquet"
     connection:
-      type: passthrough
-      passthrough:
-        passthrough_command: '{"asset": "data.csv", "columns": ["vendor_id", "pickup_at", "dropoff_at", "payment_type"]}'
+      type: flight
+      flight:
+        flight_command: '{"asset": "data.csv", "columns": ["vendor_id", "pickup_at", "dropoff_at", "payment_type"]}'
         endpoint_url: "localhost"
         port: "9000"
     transformations:
