support basic authentication
Signed-off-by: Doron Chen <cdoron@il.ibm.com>

--- a/sample/sample.yaml
+++ b/sample/sample.yaml
@@ -1,3 +1,10 @@
+auth:
+  basic:
+    credentials:
+    - username: "qqq"
+      password: "moo"
+    - username: "user"
+      password: "password"
 workers:
   - name: "main"
     address: "localhost"
