--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ schemed-yaml-config = "==0.0.3"
 requests = "*"
 fsspec = "==0.8.4"
 aiohttp = "==3.7.3"
+kubernetes = "12.0.1"
 
 [requires]
 python_version = "3.8"
