--- a/helm/afm/files/conf.yaml
+++ b/helm/afm/files/conf.yaml
@@ -11,6 +11,7 @@ data:
         endpoint_url: {{if not (contains "://" .source.connection.s3.endpoint)}}https://{{end}}{{ .source.connection.s3.endpoint }}
         credentials:
           secretProvider: {{ .source.credentialLocation }}
+          vault_credentials: {{ .source.vault_credentials}}
     {{- end }}
     {{- if .transformations }}
     transformations:
