--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ script:
 deploy:
   provider: script
   script: >-
+    sudo chmod o+x /etc/docker &&
     docker login -u ${DOCKER_USERNAME} -p ${DOCKER_TOKEN} ${DOCKER_HOSTNAME} &&
     helm registry login -u ${DOCKER_USERNAME} -p ${DOCKER_TOKEN} ${DOCKER_HOSTNAME} &&
     make push chart-push
