--- a/helm/afm/files/conf.yaml
+++ b/helm/afm/files/conf.yaml
@@ -9,9 +9,25 @@ data:
       type: s3
       s3:
         endpoint_url: {{if not (contains "://" .source.connection.s3.endpoint)}}https://{{end}}{{ .source.connection.s3.endpoint }}
+        {{ - if .source.credentialLocation }}
         credentials:
           secretProvider: {{ .source.credentialLocation }}
-        vault_credentials: {{ .source.vault }}
+        {{- end }}
+        {{ - if .source.vault }}
+        vault_credentials:
+          {{ - if .source.vault.address }}
+          address: {{ .source.vault.address }}
+          {{- end }}
+          {{ - if .source.vault.authPath }}
+          authPath: {{ .source.vault.authPath }}
+          {{- end }}
+          {{ - if .source.vault.role }}
+          role: {{ .source.vault.role }}
+          {{- end }}
+          {{ - if .source.vault.secretPath }}
+          secretPath: {{ .source.vault.secretPath }}
+          {{- end }}
+        {{- end }}
     {{- end }}
     {{- if .transformations }}
     transformations:
