--- a/module.yaml
+++ b/module.yaml
@@ -4,12 +4,12 @@ metadata:
   name: arrow-flight-module
   labels:
     name: arrow-flight-module
-    version: 0.0.1  # semantic version
+    version: 0.0.0  # semantic version
 spec:
   chart:
-    name: ghcr.io/the-mesh-for-data/arrow-flight-module-chart:latest
+    name: ghcr.io/the-mesh-for-data/arrow-flight-module-chart:0.0.0
     values:
-      image.tag: latest
+      image.tag: 0.0.0
   flows:
     - read
   capabilities:
