Add tag for release.
Signed-off-by: Mohammad-nassar10 <mohammad.nassar@ibm.com>

--- a/module.yaml
+++ b/module.yaml
@@ -4,10 +4,10 @@ metadata:
   name: arrow-flight-module
   labels:
     name: arrow-flight-module
-    version: 0.0.1  # semantic version
+    version: 0.0.0  # semantic version
 spec:
   chart:
-    name: ghcr.io/the-mesh-for-data/arrow-flight-module-chart:latest
+    name: ghcr.io/the-mesh-for-data/arrow-flight-module-chart:0.0.0
     values:
       image.tag: latest
   flows:
