changes following organization move
Signed-off-by: Doron Chen <cdoron@il.ibm.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,20 +32,20 @@ jobs:
         pip install pipenv
         
     - name: Build docker image 
-      run: export REPOSITORY=ghcr.io/the-mesh-for-data/arrow-flight-module && make build
+      run: export REPOSITORY=ghcr.io/mesh-for-data/arrow-flight-module && make build
     - name: Docker login
       if: ${{ github.event_name != 'pull_request' }}
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "the-mesh-for-data" --password-stdin "${{ env.DOCKER_HOSTNAME }}"
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login -u "mesh-for-data" --password-stdin "${{ env.DOCKER_HOSTNAME }}"
     - name: Docker push
       if: ${{ (github.event_name != 'pull_request') && !contains(github.ref, 'tags') }}
-      run: export REPOSITORY=ghcr.io/the-mesh-for-data/arrow-flight-module && make push
+      run: export REPOSITORY=ghcr.io/mesh-for-data/arrow-flight-module && make push
     - id: version
       name: Infer version
       run: echo ::set-output name=version::${GITHUB_REF#refs/*/}
     - run: docker images
     - name: Helm login
       if: ${{ github.event_name != 'pull_request' }}
-      run: export HELM_EXPERIMENTAL_OCI=1 && echo "${{ secrets.DOCKER_PASSWORD }}" | helm registry login -u "${{ github.actor }}" --password-stdin "${{ env.DOCKER_HOSTNAME }}"
+      run: export HELM_EXPERIMENTAL_OCI=1 && echo "${{ secrets.GITHUB_TOKEN }}" | helm registry login -u "${{ github.actor }}" --password-stdin "${{ env.DOCKER_HOSTNAME }}"
     - name: Helm chart push
       if: ${{ (github.event_name != 'pull_request') && !contains(github.ref, 'tags') }}
-      run: export HELM_REPOSITORY=ghcr.io/the-mesh-for-data/arrow-flight-module-chart && make chart-push
+      run: export HELM_REPOSITORY=ghcr.io/mesh-for-data/arrow-flight-module-chart && make chart-push
