--- a/module.yaml
+++ b/module.yaml
@@ -14,6 +14,10 @@ spec:
     - read
   capabilities:
     api:
+      endpoint:
+        hostname: "s3.eu-gb.cloud-object-storage.appdomain.cloud"
+        port: 80
+        scheme: grpc
       protocol: m4d-arrow-flight
       dataformat: arrow
     supportedInterfaces:
