--- a/sample/sample.yaml
+++ b/sample/sample.yaml
@@ -8,6 +8,11 @@ workers:
     address: "localhost"
     port: 8080
 data:
+  - name: "new-dataset"
+    format: parquet
+    path: "/tmp/new-dataset"
+    connection:
+      type: localfs
   - name: "nyc-taxi.parquet"
     format: parquet
     path: "ursa-labs-taxi-data/2019"
