rename the service name to be *only* the release name
Signed-off-by: tomersolomon1 <tomer.solomon1@gmail.com>

--- a/helm/afm/templates/service.yaml
+++ b/helm/afm/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "arrow-flight-module.fullname" . }}
+  name: {{ .Release.Name }}
   labels:
     app.kubernetes.io/name: {{ include "arrow-flight-module.name" . }}
     helm.sh/chart: {{ include "arrow-flight-module.chart" . }}
