replace 'source' with 'sink' for write
Signed-off-by: CDORON@il.ibm.com <cdoron@lnx-arrow.sl.cloud9.ibm.com>

--- a/module.yaml
+++ b/module.yaml
@@ -29,7 +29,7 @@ spec:
         protocol: s3
         dataformat: csv
     - flow: write
-      source:
+      sink:
         protocol: s3
         dataformat: parquet
     actions:
