--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,11 +1,11 @@
 blank_issues_enabled: true
 contact_links:
     - name: Ask a Question
-      url: https://github.com/mesh-for-data/the-mesh-for-data-flight-module/discussions/new?category=q-a
+      url: https://github.com/fybrik.io/arrow-flight-module/discussions/new?category=q-a
       about: Ask the community for help
     - name: Feature Request
-      url: https://github.com/mesh-for-data/the-mesh-for-data-flight-module/discussions/new?category=ideas
+      url: https://github.com/fybrik.io/arrow-flight-module/discussions/new?category=ideas
       about: Share ideas for new features
     - name: Bug Report
-      url: https://github.com/mesh-for-data/the-mesh-for-data-flight-module/issues/new
+      url: https://github.com/fybrik.io/arrow-flight-module/issues/new
       about: Report a reproducable bug
