--- a/module.yaml
+++ b/module.yaml
@@ -1,5 +1,5 @@
-apiVersion: app.m4d.ibm.com/v1alpha1
-kind: M4DModule
+apiVersion: app.fybrik.ibm.com/v1alpha1
+kind: FybrikModule
 metadata:
   name: arrow-flight-module
   labels:
@@ -7,7 +7,7 @@ metadata:
     version: latest  # semantic version
 spec:
   chart:
-    name: ghcr.io/mesh-for-data/arrow-flight-module-chart:latest
+    name: ghcr.io/fybrik.io/arrow-flight-module-chart:latest
     values:
       image.tag: latest
   flows:
@@ -17,7 +17,7 @@ spec:
       endpoint:
         port: 80
         scheme: grpc
-      protocol: m4d-arrow-flight
+      protocol: fybrik-arrow-flight
       dataformat: arrow
     supportedInterfaces:
     - flow: read
