--- a/module.yaml
+++ b/module.yaml
@@ -1,4 +1,4 @@
-apiVersion: app.fybrik.ibm.com/v1alpha1
+apiVersion: app.fybrik.io/v1alpha1
 kind: FybrikModule
 metadata:
   name: arrow-flight-module
