--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,8 @@ on:
 
 env:
   DOCKER_HOSTNAME: ghcr.io
+  TAG: latest
+  
 
 
 jobs:
@@ -30,14 +32,17 @@ jobs:
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
         pip install pipenv
-        
-    - name: Build docker image 
+     
+    - name: New tag
+      if: ${{ (github.event_name != 'pull_request') && contains(github.ref, 'tags') }}
+      run: echo "TAG=${GITHUB_REF##*/v}" >> $GITHUB_ENV
+    - name: Build docker image
       run: export REPOSITORY=ghcr.io/mesh-for-data/arrow-flight-module && make build
     - name: Docker login
       if: ${{ github.event_name != 'pull_request' }}
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login -u "mesh-for-data" --password-stdin "${{ env.DOCKER_HOSTNAME }}"
     - name: Docker push
-      if: ${{ (github.event_name != 'pull_request') && !contains(github.ref, 'tags') }}
+      if: ${{ (github.event_name != 'pull_request') }}
       run: export REPOSITORY=ghcr.io/mesh-for-data/arrow-flight-module && make push
     - id: version
       name: Infer version
@@ -47,5 +52,5 @@ jobs:
       if: ${{ github.event_name != 'pull_request' }}
       run: export HELM_EXPERIMENTAL_OCI=1 && echo "${{ secrets.GITHUB_TOKEN }}" | helm registry login -u "${{ github.actor }}" --password-stdin "${{ env.DOCKER_HOSTNAME }}"
     - name: Helm chart push
-      if: ${{ (github.event_name != 'pull_request') && !contains(github.ref, 'tags') }}
+      if: ${{ (github.event_name != 'pull_request') }}
       run: export HELM_REPOSITORY=ghcr.io/mesh-for-data/arrow-flight-module-chart && make chart-push
