Update module.yaml following a change to FybrikModule.
Signed-off-by: Revital Sur <eres@il.ibm.com>

--- a/module.yaml
+++ b/module.yaml
@@ -12,7 +12,7 @@ spec:
     values:
       image.tag: latest
   capabilities:
-    - capability: read
+    read:
       scope: workload
       api:
         endpoint:
