--- a/helm/afm/values.sample.yaml
+++ b/helm/afm/values.sample.yaml
@@ -16,11 +16,11 @@ read:
     credentialLocation: htttp://test/test
     format: parquet
   transformations:
-  - id: "redact-ID"
+  - id: "RedactAction"
     level: 2 # column
     args:
       column_name: col1
-  - id: "removed-ID"
+  - id: "RemoveAction"
     level: 2 # column
     args:
       column_name: col2
@@ -36,7 +36,7 @@ read:
     credentialLocation: htttp://test/test
     format: parquet
   transformations:
-  - id: "redact-ID"
+  - id: "RedactAction"
     level: 2 # column
     args:
       column_name: col1
