--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Helm tool installer
+      uses: Azure/setup-helm@v1
+      with:
+        version: v3.6.3
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
