--- a/module.yaml
+++ b/module.yaml
@@ -28,10 +28,8 @@ spec:
             protocol: s3
             dataformat: csv
       actions:
-        - id: RedactAction
-          level: 2  # column
-        - id: RemoveAction
-          level: 2  # column
+        - name: RedactAction
+        - name: RemoveAction
     - capability: write
       scope: workload
       api:
@@ -45,7 +43,5 @@ spec:
             protocol: s3
             dataformat: parquet
       actions:
-        - id: RedactAction
-          level: 2  # column
-        - id: RemoveAction
-          level: 2  # column
+        - name: RedactAction
+        - name: RemoveAction
