Upgrade to Helm 3.7 (#108)
Signed-off-by: Revital Sur <eres@il.ibm.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,11 @@ on:
 
 env:
   DOCKER_HOSTNAME: ghcr.io
-  TAG: latest
-
+  DOCKER_NAMESPACE: fybrik 
+  DOCKER_USERNAME: ${{ github.actor }}
+  # helm 3.7 chart tag must be semver
+  HELM_TAG: 0.0.0
+  DOCKER_TAG: latest
 
 jobs:
   build:
@@ -22,10 +25,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: New tag
+      if: ${{ (github.event_name != 'pull_request') && contains(github.ref, 'tags') }}
+      run: |
+        echo "DOCKER_TAG=${GITHUB_REF##*/v}" >> $GITHUB_ENV
+        echo "HELM_TAG=${GITHUB_REF##*/v}" >> $GITHUB_ENV
+
     - name: Helm tool installer
       uses: Azure/setup-helm@v1
       with:
-        version: v3.6.3
+        version: v3.7.0
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
@@ -35,25 +44,18 @@ jobs:
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
         pip install pipenv
-        
-    - name: New tag
-      if: ${{ (github.event_name != 'pull_request') && contains(github.ref, 'tags') }}
-      run: echo "TAG=${GITHUB_REF##*/v}" >> $GITHUB_ENV    
     - name: Build docker image 
-      run: export REPOSITORY=ghcr.io/fybrik/arrow-flight-module && make build
-    - name: Docker login
-      if: ${{ github.event_name != 'pull_request' }}
-      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login -u "fybrik" --password-stdin "${{ env.DOCKER_HOSTNAME }}"
+      run: make build
     - name: Docker push
       if: ${{ (github.event_name != 'pull_request') }}
-      run: export REPOSITORY=ghcr.io/fybrik/arrow-flight-module && make push
-    - id: version
-      name: Infer version
-      run: echo ::set-output name=version::${GITHUB_REF#refs/*/}
+      run: |
+        echo "${{ secrets.GITHUB_TOKEN }}" | docker login -u "${{ env.DOCKER_USERNAME }}" --password-stdin "${{ env.DOCKER_HOSTNAME }}"
+        make docker-push
     - run: docker images
-    - name: Helm login
-      if: ${{ github.event_name != 'pull_request' }}
-      run: export HELM_EXPERIMENTAL_OCI=1 && echo "${{ secrets.GITHUB_TOKEN }}" | helm registry login -u "${{ github.actor }}" --password-stdin "${{ env.DOCKER_HOSTNAME }}"
     - name: Helm chart push
       if: ${{ (github.event_name != 'pull_request') }}
-      run: export HELM_REPOSITORY=ghcr.io/fybrik/arrow-flight-module-chart && make chart-push
+      run: |
+        export HELM_EXPERIMENTAL_OCI=1 
+        echo "${{ secrets.GITHUB_TOKEN }}" | helm registry login -u "${{ github.actor }}" --password-stdin "${{ env.DOCKER_HOSTNAME }}" 
+        make chart-push
+
