--- a/module.yaml
+++ b/module.yaml
@@ -4,11 +4,11 @@ metadata:
   name: arrow-flight-module
   labels:
     name: arrow-flight-module
-    version: latest  # semantic version
+    version: latest # semantic version
 spec:
   type: service
   chart:
-    name: ghcr.io/fybrik/arrow-flight-module-chart:latest
+    name: ghcr.io/fybrik/arrow-flight-module-chart:0.0.0
     values:
       image.tag: latest
   capabilities:
