--- a/module.yaml
+++ b/module.yaml
@@ -15,10 +15,12 @@ spec:
     - capability: read
       scope: workload
       api:
-        endpoint:
-          port: 80
-          scheme: grpc
-        protocol: fybrik-arrow-flight
+        connection:
+          name: fybrik-arrow-flight
+          fybrik-arrow-flight:
+            hostname: "{{ .Release.Name }}.{{ .Release.Namespace }}"
+            port: 80
+            scheme: grpc
       supportedInterfaces:
         - source:
             protocol: s3
@@ -32,10 +34,12 @@ spec:
     - capability: write
       scope: workload
       api:
-        endpoint:
-          port: 80
-          scheme: grpc
-        protocol: fybrik-arrow-flight
+        connection:
+          name: fybrik-arrow-flight
+          fybrik-arrow-flight:
+            hostname: "{{ .Release.Name }}.{{ .Release.Namespace }}"
+            port: 80
+            scheme: grpc
       supportedInterfaces:
         - sink:
             protocol: s3
