--- a/helm/afm/Chart.yaml
+++ b/helm/afm/Chart.yaml
@@ -1,5 +1,4 @@
 apiVersion: v1
-appVersion: "1.0"
 description: A Helm chart for installing AFM in Kubernetes
-name: arrow-flight-module
-version: 0.0.0
+name: arrow-flight-module-chart
+version: "0.0.0"
