--- a/helm/afm/values.sample.yaml
+++ b/helm/afm/values.sample.yaml
@@ -1,6 +1,6 @@
 # Try it with `helm install --generate-name --dry-run -f helm/afm/values.sample.yaml helm/afm`
-metadata:
-  labels: {}
+labels:
+  app.fybrik.io/app-uuid: 12345678
   name: 012d42539692bba841a7
   namespace: default
 read:
