--- a/.github/workflows/test-module.yaml
+++ b/.github/workflows/test-module.yaml
@@ -37,5 +37,5 @@ jobs:
         version: 2     # default
         verbose: false # default
     - name: run-test
-      run: pushd hack/tools && ./test_module.sh ${{ github.event.inputs.kind-version }} ${{ github.event.inputs.fybrik-version }} ${{ github.event.inputs.module-version }} ${{ github.event.inputs.module-type }} ${{ github.event.inputs.cert-manager-version }} && popd
+      run: pushd hack && ./test_module.sh ${{ github.event.inputs.kind-version }} ${{ github.event.inputs.fybrik-version }} ${{ github.event.inputs.module-version }} ${{ github.event.inputs.module-type }} ${{ github.event.inputs.cert-manager-version }}
 
