--- a/helm/afm/files/conf.yaml
+++ b/helm/afm/files/conf.yaml
@@ -4,6 +4,7 @@ data:
 {{- range .Values.assets }}
   - format: {{ .source.format }}
     name: {{ .assetID | quote }}
+    capability: {{ .capability }}
     {{- if .source.connection.s3 }}
     path: "{{ .source.connection.s3.bucket }}/{{ .source.connection.s3.object_key }}"
     connection:
