support cascading in helm one arrow-flight server does only transformations reads from another arrow-flight server
Signed-off-by: Doron Chen <cdoron@il.ibm.com>

--- a/helm/afm/files/conf.yaml
+++ b/helm/afm/files/conf.yaml
@@ -4,6 +4,14 @@ data:
 {{- range .Values.assets }}
   - format: {{ .source.format }}
     name: {{ .assetID | quote }}
+    {{- if .source.connection.fybrik-arrow-flight }}
+    connection:
+      type: flight
+      flight:
+        endpoint_url: {{ .source.connection.fybrik-arrow-flight.hostname }}
+        port: {{ .source.connection.fybrik-arrow-flight.port }}
+        flight_command: "{\"asset\": {{ .assetID | quote }} }"
+    {{- end }}
     {{- if .source.connection.s3 }}
     path: "{{ .source.connection.s3.bucket }}/{{ .source.connection.s3.object_key }}"
     connection:
