--- a/helm/afm/files/conf.yaml
+++ b/helm/afm/files/conf.yaml
@@ -5,13 +5,13 @@ data:
   - format: {{ .source.format }}
     name: {{ .assetID | quote }}
     capability: {{ .capability }}
-    {{- if .source.connection.fybrik-arrow-flight }}
+    {{- if index .source "connection" "fybrik-arrow-flight" }}
     connection:
       type: flight
       flight:
-        endpoint_url: {{ .source.connection.fybrik-arrow-flight.hostname }}
-        port: {{ .source.connection.fybrik-arrow-flight.port }}
-        flight_command: "{\"asset\": {{ .assetID | quote }} }"
+        endpoint_url: {{ index .source "connection" "fybrik-arrow-flight" "hostname" }}
+        port: {{ index .source "connection" "fybrik-arrow-flight" "port" }}
+        flight_command: "{ \"asset\": \"{{ .assetID }}\" }"
     {{- end }}
     {{- if .source.connection.s3 }}
     path: "{{ .source.connection.s3.bucket }}/{{ .source.connection.s3.object_key }}"
