--- a/Pipfile
+++ b/Pipfile
@@ -24,6 +24,7 @@ requests = "*"
 fsspec = "==0.8.4"
 aiohttp = "==3.7.4"
 pyyaml = "==5.4.1"
+faker = "==13.3.0"
 fybrik_python_logging = {version="0.1.0", index="testpypi"}
 
 [requires]
