fix typo in conf.yaml
Signed-off-by: Doron Chen <cdoron@il.ibm.com>

--- a/helm/afm/files/conf.yaml
+++ b/helm/afm/files/conf.yaml
@@ -74,7 +74,7 @@ data:
     {{- if $query }}
       - action: "Filter"
         description: "filtering based on query"
-        option:
+        options:
           query: "{{ $query }}"
     {{- end }}
     {{- end }}
