add filtering based on age for instance to filter out information on minors
Signed-off-by: Doron Chen <cdoron@il.ibm.com>

--- a/module.yaml
+++ b/module.yaml
@@ -47,3 +47,5 @@ spec:
       actions:
         - name: RedactAction
         - name: RemoveAction
+        - name: FilterAction
+        - name: AgeFilterAction
