--- a/helm/afm/files/conf.yaml
+++ b/helm/afm/files/conf.yaml
@@ -45,7 +45,9 @@ data:
     transformations:
     {{- $redactColumns := list -}}
     {{- $removeColumns := list -}}
-    {{- $query := list -}}
+    {{- $query := "" -}}
+    {{- $ageFilterColumns := list -}}
+    {{- $age := 0 -}}
     {{- range $asset.transformations -}}
       {{- if eq .name "RedactAction" -}}
         {{- $redactColumns = .RedactAction.columns -}}
@@ -57,6 +59,10 @@ data:
         {{- $query = .FilterAction.options.query -}}
       {{- end -}}
     {{- end -}}
+      {{- if eq .name "AgeFilterAction" -}}
+        {{- $ageFilterColumns = .AgeFilterAction.columns -}}
+        {{- $age = .AgeFilterAction.options.age -}}
+      {{- end -}}
     {{- if $redactColumns }}
       - action: "Redact"
         description: "redacting columns: {{ $redactColumns }}"
@@ -80,6 +86,18 @@ data:
         description: "filtering based on query"
         options:
           query: "{{ $query }}"
+    {{- end }}
+    {{- if $ageFilterColumns }}
+      - action: "AgeFilter"
+        description: "filtering based on age"
+        columns:
+          {{- range $ageFilterColumns}}
+          - {{ . }}
+          {{- end }}
+        {{- if $age }}
+        options:
+          age: "{{ $age }}"
+        {{- end }}
     {{- end }}
     {{- end }}
 {{- end -}}
