Remove unused file.
Signed-off-by: mohammad-nassar10 <mohammad.nassar@ibm.com>

--- a/sample/sample.yaml
+++ b/sample/sample.yaml
@@ -35,7 +35,7 @@ data:
       - action: "Redact"
         description: "redact stuff"
         columns:
-          - Date of Birth
+          - Email
         options:
           redactValue: "XXXXX"
   - name: "nyc-taxi.parquet"
